# pragma-test

./: CMakeLists.txt  endpacked.h  main.cpp  packed.h
